# typi

./: .gitignore  CMakeLists.txt  Readme.md  feedback.cpp  feedback.h  main.cpp  makegraph.cpp  run.sh  terminal_utils.cpp  terminal_utils.h  todo.md  typing3.cpp  typing_results.db
include/: database.h  feedback.h  makegraph.h  terminal_utils.h
src/: database.cpp  feedback.cpp  main.cpp  makegraph.cpp  terminal_utils.cpp  words.txt
